Fixed Images on Small Screens

--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1061,7 +1061,7 @@ INPUT.hintTextboxActive { color: #000 !important; }
 	}
 
 	.imageWrapper{
-		margin-left: -26px;
+		margin-left: -20px;
 		height: 275px;
 		line-height: 230px;
 	}
